# ParAutomatik

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/Jupyter_notebooks/: CCS_DB.db  DFTB_DB.db  DFT_DB.db  Untitled.ipynb  gen_PiNN.ipynb  gen_SK.ipynb  gen_ccs.ipynb  parautomatik.ipynb  run_fortnet.ipynb  run_sim.ipynb  sk_util.py  trainingset.ipynb
examples/Jupyter_notebooks/.ipynb_checkpoints/: gen_PiNN-checkpoint.ipynb
examples/Jupyter_notebooks/CCS/: CCS_error.out  CCS_params.json  input_interpreted.json
examples/Jupyter_notebooks/RUN_SIM/: band.out  dftb_in_old.hsd  opt.traj
examples/Jupyter_notebooks/RUN_SK/: band.out  detailed.out  dftb.out  dftb_in.hsd  dftb_pin.hsd  geo_end.gen
examples/Jupyter_notebooks/SKF/: C-C.skf  C-H.skf  C-Li.skf  C-O.skf  H-C.skf  H-H.skf  H-Li.skf  H-O.skf  Li-C.skf  Li-H.skf  Li-Li.skf  Li-O.skf  O-C.skf  O-H.skf  O-Li.skf  O-O.skf
examples/python_scripts/: rep_parautomatik.py
examples/python_scripts/.ipynb_checkpoints/: rep_parautomatik-checkpoint.py
pgm/Jupyter_notebooks/: CCS_DB.db  gen_ccs.ipynb  parautomatik.ipynb
pgm/Jupyter_notebooks/.ipynb_checkpoints/: gen_SK-checkpoint.ipynb  gen_ccs-checkpoint.ipynb  run_sim-checkpoint.ipynb
pgm/Jupyter_notebooks/RUN_SIM/: detailed.out  dftb_in.hsd  dftb_pin.hsd  geo_end.gen  output.traj  singlepoint.out
src/parautomatik/: __init__.py
src/parautomatik/common/: exceptions.py
src/parautomatik/scripts/: build_db.py  export_sktable.py
tests/: test_parautomatik.py
(+270 files in other folders)
