[tool.poetry]
name = "parautomatik"
version = "0.0.1"
description = "Automatic Parametrisation of Force Fields"
authors = ["Thijs Smolders <thijs.smolders@kemi.uu.se>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
python-semantic-release = ">=7.32.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"             # version location
branch = "main"                                         # branch to make releases of
changelog_file = "CHANGELOG.md"                         # changelog file
build_command = "pip install poetry && poetry build"    # build dists
dist_path = "dist/"                                     # where to put dists
upload_to_release = true                                # auto-create GitHub release
upload_to_pypi = false                                  # don't auto-upload to PyPI
remove_dist = false                                     # don't remove dists
patch_without_tag = true                                # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
